--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,10 @@ cmake_minimum_required (VERSION 3.11)
 
 project(iss-receiver)
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "-ggdb -Wall -Wextra -Werror -Wno-implicit-fallthrough ${CMAKE_CXX_FLAGS}")
+
+if(NOT WIN32)
+    set(CMAKE_CXX_FLAGS "-ggdb -Wall -Wextra -Werror -Wno-implicit-fallthrough ${CMAKE_CXX_FLAGS}")
+endif()
 
 add_library(receiver
     IReceiver.h
